# pytest-remaster

./: .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yaml  release.yaml
src/pytest_remaster/: __init__.py  core.py  discovery.py  golden_master.py  patching.py  plugin.py
tests/: test_core.py  test_discovery.py  test_golden_master.py  test_patching.py  test_plugin.py
tests/demo/: chatbot.py  test_chatbot.py
tests/demo/cases/greet/goodbye/: command  expected_0  result_1
tests/demo/cases/greet/hello/: expected_0  expected_1
tests/demo/cases/help/unknown-command/: expected_0  result_1
tests/demo_pylint/: platform_checker.py  test_functional.py
tests/demo_pylint/cases/: simple_module.311.linux.txt  simple_module.313.linux.txt  simple_module.314.txt  simple_module.py  simple_module.txt
tests/demo_subprocess/: cli.py  test_cli.py
tests/demo_subprocess/cases/divide/: expected.stdout  input.json
tests/demo_subprocess/cases/divide-by-zero/: input.json
tests/demo_subprocess/cases/greet/: input.json
tests/demo_subprocess/cases/unknown/: expected.stderr  input.json
