[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=77", "setuptools-scm>=8" ]

[project]
name = "pytest-remaster"
description = "Golden master testing for pytest with automatic regeneration."
readme = "README.md"
license = "MIT"
authors = [ { name = "Pierre Sassoulas" } ]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Testing",
]
dynamic = [ "version" ]
dependencies = [ "pytest>=7" ]
optional-dependencies.dev = [ "pre-commit", "pylint>4", "pytest-cov" ]
urls.Homepage = "https://github.com/Pierre-Sassoulas/pytest-remaster"
entry-points.pytest11.remaster = "pytest_remaster.plugin"

[tool.setuptools_scm]

[tool.pylint]
messages_control.disable = [
  "magic-value-comparison",
  "missing-docstring",
  "duplicate-code",
]

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.addopts = "--cov --cov-report=term-missing"

[tool.coverage]
run.source = [ "pytest_remaster" ]
