[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=77", "setuptools-scm>=8" ]

[project]
name = "pytest-remaster"
description = "Pytest plugin for golden master (characterisation) testing with automatic expected file regeneration."
readme = "README.md"
license = "MIT"
authors = [ { name = "Pierre Sassoulas" } ]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Testing",
]
dynamic = [ "version" ]
dependencies = [ "pytest>=7" ]
optional-dependencies.dev = [ "pre-commit", "pylint>4", "pytest-cov" ]
urls.Homepage = "https://github.com/Pierre-Sassoulas/pytest-remaster"
entry-points.pytest11.remaster = "pytest_remaster.plugin"

[tool.setuptools_scm]

[tool.ruff]
target-version = "py310"
line-length = 88
format.skip-magic-trailing-comma = true
lint.select = [
  "B",      # bugbear
  "D",      # pydocstyle
  "E",      # pycodestyle
  "F",      # pyflakes
  "FURB",   # refurb
  "I",      # isort
  "PGH004", # pygrep-hooks - Use specific rule codes when using noqa
  "PIE",    # flake8-pie
  "PLC",    # pylint convention
  "PLE",    # pylint error
  "PLR",    # pylint refactor
  "PLW",    # pylint warning
  "PYI",    # flake8-pyi
  "RUF",    # ruff
  "UP",     # pyupgrade
  "W",      # pycodestyle
]
lint.ignore = [
  "D100",    # Missing docstring in public module
  "D101",    # Missing docstring in public class
  "D103",    # Missing docstring in public function
  "D104",    # Missing docstring in public package
  "D105",    # Missing docstring in magic method
  "D107",    # Missing docstring in __init__
  "D203",    # one-blank-line-before-class (incompatible with D211)
  "D213",    # multi-line-summary-second-line (incompatible with D212)
  "PLC0415", # import-outside-toplevel
  "PLR0913", # too-many-arguments
]
lint.isort.split-on-trailing-comma = false

[tool.pylint]
messages_control.disable = [
  "magic-value-comparison",
  "missing-docstring",
  "duplicate-code",
  "too-many-arguments",
]

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.addopts = "--cov --cov-report=term-missing"

[tool.coverage]
run.source = [ "pytest_remaster" ]
